[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/holyruins/tileset.tres" type="TileSet" id=1]
[ext_resource path="res://scenes/holyruins/onewayplatform.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/common/hangable.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/common/hangblockend.png" type="Texture" id=4]
[ext_resource path="res://scenes/common/damagables/spiketile.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/holyruins/boss/gianteyeball.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/holyruins/boss/sensor.gd" type="Script" id=7]
[ext_resource path="res://scenes/common/teleport.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 430.861, 16 )

[node name="LVL_NOTITLE" type="Node2D" index="0"]

__meta__ = {
"__editor_plugin_screen__": "2D"
}

[node name="tilemap" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 524288
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -589836, 4, 0, -589826, 1073741859, 0, -589825, 4, 0, -655360, 5, 0, -655359, 5, 0, -655358, 5, 0, -655357, 4, 0, -655346, 4, 0, -524300, 4, 0, -524290, 1073741859, 0, -524289, 4, 0, -589824, 5, 0, -589823, 5, 0, -589822, 5, 0, -589821, 4, 0, -589810, 4, 0, -458764, 4, 0, -458754, 1073741859, 0, -458753, 4, 0, -524288, 5, 0, -524287, 5, 0, -524286, 5, 0, -524285, 4, 0, -524274, 4, 0, -393228, 1610612737, 0, -393227, 1073741824, 0, -393226, 1073741824, 0, -393225, 1073741824, 0, -393224, 1073741824, 0, -393223, 1073741824, 0, -393222, 1073741824, 0, -393221, 1073741824, 0, -393220, 1073741824, 0, -393219, 1073741824, 0, -393218, 1073741824, 0, -393217, 1073741825, 0, -458752, 5, 0, -458751, 5, 0, -458750, 5, 0, -458749, 1610612737, 0, -458748, 1073741824, 0, -458747, 1073741824, 0, -458746, 1073741824, 0, -458745, 1073741824, 0, -458744, 1073741824, 0, -458743, 1073741824, 0, -458742, 1073741824, 0, -458741, 1073741824, 0, -458740, 1073741824, 0, -458739, 1073741824, 0, -458738, 1073741825, 0, -327692, 4, 0, -327691, 5, 0, -327690, 5, 0, -327689, 5, 0, -327688, 5, 0, -327687, 5, 0, -327686, 5, 0, -327685, 5, 0, -327684, 5, 0, -327683, 5, 0, -327682, 5, 0, -327681, 5, 0, -393216, 5, 0, -393215, 5, 0, -393214, 5, 0, -393213, 5, 0, -393212, 5, 0, -393211, 5, 0, -393210, 5, 0, -393209, 5, 0, -393208, 5, 0, -393207, 5, 0, -393206, 5, 0, -393205, 5, 0, -393204, 5, 0, -393203, 5, 0, -393202, 4, 0, -262156, 4, 0, -262155, 5, 0, -262154, 5, 0, -262153, 5, 0, -262152, 5, 0, -262151, 5, 0, -262150, 5, 0, -262149, 5, 0, -262148, 5, 0, -262147, 5, 0, -262146, 5, 0, -262145, 5, 0, -327680, 5, 0, -327679, 5, 0, -327678, 5, 0, -327677, 5, 0, -327676, 5, 0, -327675, 5, 0, -327674, 5, 0, -327673, 5, 0, -327672, 5, 0, -327671, 5, 0, -327670, 5, 0, -327669, 5, 0, -327668, 5, 0, -327667, 5, 0, -327666, 4, 0, -196620, 4, 0, -196619, 5, 0, -196618, 5, 0, -196617, 5, 0, -196616, 5, 0, -196615, 5, 0, -196614, 5, 0, -196613, 5, 0, -196612, 5, 0, -196611, 5, 0, -196610, 5, 0, -196609, 5, 0, -262144, 5, 0, -262143, 5, 0, -262142, 5, 0, -262141, 5, 0, -262140, 5, 0, -262139, 5, 0, -262138, 5, 0, -262137, 5, 0, -262136, 5, 0, -262135, 5, 0, -262134, 5, 0, -262133, 5, 0, -262132, 5, 0, -262131, 5, 0, -262130, 4, 0, -131084, 4, 0, -131083, 5, 0, -131082, 5, 0, -131081, 5, 0, -131080, 5, 0, -131079, 5, 0, -131078, 5, 0, -131077, 5, 0, -131076, 5, 0, -131075, 5, 0, -131074, 5, 0, -131073, 5, 0, -196608, 5, 0, -196607, 5, 0, -196606, 5, 0, -196605, 5, 0, -196604, 5, 0, -196603, 5, 0, -196602, 5, 0, -196601, 5, 0, -196600, 5, 0, -196599, 5, 0, -196598, 5, 0, -196597, 5, 0, -196596, 5, 0, -196595, 5, 0, -196594, 4, 0, -65548, 4, 0, -65547, 5, 0, -65546, 5, 0, -65545, 5, 0, -65544, 5, 0, -65543, 5, 0, -65542, 5, 0, -65541, 5, 0, -65540, 5, 0, -65539, 5, 0, -65538, 5, 0, -65537, 5, 0, -131072, 5, 0, -131071, 5, 0, -131070, 5, 0, -131069, 5, 0, -131068, 5, 0, -131067, 5, 0, -131066, 5, 0, -131065, 5, 0, -131064, 5, 0, -131063, 5, 0, -131062, 5, 0, -131061, 5, 0, -131060, 5, 0, -131059, 5, 0, -131058, 4, 0, -12, 4, 0, -11, 5, 0, -10, 5, 0, -9, 5, 0, -8, 5, 0, -7, 5, 0, -6, 5, 0, -5, 5, 0, -4, 5, 0, -3, 5, 0, -2, 5, 0, -1, 5, 0, -65536, 5, 0, -65535, 5, 0, -65534, 5, 0, -65533, 5, 0, -65532, 5, 0, -65531, 5, 0, -65530, 5, 0, -65529, 5, 0, -65528, 5, 0, -65527, 5, 0, -65526, 5, 0, -65525, 5, 0, -65524, 5, 0, -65523, 5, 0, -65522, 4, 0, 65524, 4, 0, 65525, 5, 0, 65526, 5, 0, 65527, 5, 0, 65528, 5, 0, 65529, 5, 0, 65530, 5, 0, 65531, 5, 0, 65532, 5, 0, 65533, 5, 0, 65534, 5, 0, 65535, 5, 0, 0, 5, 0, 1, 5, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 5, 5, 0, 6, 5, 0, 7, 5, 0, 8, 5, 0, 9, 5, 0, 10, 5, 0, 11, 5, 0, 12, 5, 0, 13, 5, 0, 14, 4, 0, 131060, 4, 0, 131061, 5, 0, 131062, 5, 0, 131063, 5, 0, 131064, 5, 0, 131065, 5, 0, 131066, 5, 0, 131067, 5, 0, 131068, 5, 0, 131069, 5, 0, 131070, 5, 0, 131071, 5, 0, 65536, 5, 0, 65537, 5, 0, 65538, 5, 0, 65539, 5, 0, 65540, 5, 0, 65541, 5, 0, 65542, 5, 0, 65543, 5, 0, 65544, 5, 0, 65545, 5, 0, 65546, 5, 0, 65547, 5, 0, 65548, 5, 0, 65549, 5, 0, 65550, 4, 0, 196596, 1073741825, 0, 196597, 5, 0, 196598, 5, 0, 196599, 5, 0, 196600, 5, 0, 196601, 5, 0, 196602, 5, 0, 196603, 5, 0, 196604, 5, 0, 196605, 5, 0, 196606, 5, 0, 196607, 5, 0, 131072, 5, 0, 131073, 5, 0, 131074, 5, 0, 131075, 5, 0, 131076, 5, 0, 131077, 5, 0, 131078, 5, 0, 131079, 5, 0, 131080, 5, 0, 131081, 5, 0, 131082, 5, 0, 131083, 5, 0, 131084, 5, 0, 131085, 5, 0, 131086, 4, 0, 262132, 5, 0, 262133, 5, 0, 262134, 5, 0, 262135, 5, 0, 262136, 5, 0, 262137, 5, 0, 262138, 5, 0, 262139, 5, 0, 262140, 5, 0, 262141, 5, 0, 262142, 5, 0, 262143, 5, 0, 196608, 5, 0, 196609, 5, 0, 196610, 5, 0, 196611, 5, 0, 196612, 5, 0, 196613, 5, 0, 196614, 5, 0, 196615, 5, 0, 196616, 5, 0, 196617, 5, 0, 196618, 5, 0, 196619, 5, 0, 196620, 5, 0, 196621, 5, 0, 196622, 4, 0, 327668, 5, 0, 327669, 5, 0, 327670, 5, 0, 327671, 5, 0, 327672, 5, 0, 327673, 5, 0, 327674, 5, 0, 327675, 5, 0, 327676, 5, 0, 327677, 5, 0, 327678, 5, 0, 327679, 5, 0, 262144, 5, 0, 262145, 5, 0, 262146, 5, 0, 262147, 5, 0, 262148, 5, 0, 262149, 5, 0, 262150, 5, 0, 262151, 5, 0, 262152, 5, 0, 262153, 5, 0, 262154, 5, 0, 262155, 5, 0, 262156, 5, 0, 262157, 5, 0, 262158, 4, 0, 393204, 5, 0, 393205, 5, 0, 393206, 5, 0, 393207, 5, 0, 393208, 5, 0, 393209, 5, 0, 393210, 5, 0, 393211, 5, 0, 393212, 5, 0, 393213, 5, 0, 393214, 5, 0, 393215, 5, 0, 327680, 5, 0, 327681, 5, 0, 327682, 5, 0, 327683, 5, 0, 327684, 5, 0, 327685, 5, 0, 327686, 5, 0, 327687, 5, 0, 327688, 5, 0, 327689, 5, 0, 327690, 5, 0, 327691, 5, 0, 327692, 5, 0, 327693, 5, 0, 327694, 4, 0, 458740, 5, 0, 458741, 5, 0, 458742, 5, 0, 458743, 5, 0, 458744, 5, 0, 458745, 5, 0, 458746, 5, 0, 458747, 5, 0, 458748, 5, 0, 458749, 5, 0, 458750, 5, 0, 458751, 5, 0, 393216, 5, 0, 393217, 5, 0, 393218, 5, 0, 393219, 5, 0, 393220, 5, 0, 393221, 5, 0, 393222, 5, 0, 393223, 5, 0, 393224, 5, 0, 393225, 5, 0, 393226, 5, 0, 393227, 5, 0, 393228, 5, 0, 393229, 5, 0, 393230, 4, 0, 524276, 5, 0, 524277, 5, 0, 524278, 5, 0, 524279, 5, 0, 524280, 5, 0, 524281, 5, 0, 524282, 5, 0, 524283, 5, 0, 524284, 5, 0, 524285, 5, 0, 524286, 5, 0, 524287, 5, 0, 458752, 5, 0, 458753, 5, 0, 458754, 5, 0, 458755, 5, 0, 458756, 5, 0, 458757, 5, 0, 458758, 5, 0, 458759, 5, 0, 458760, 5, 0, 458761, 5, 0, 458762, 5, 0, 458763, 5, 0, 458764, 5, 0, 458765, 5, 0, 458766, 4, 0, 589812, 536870913, 0, 589813, 5, 0, 589814, 5, 0, 589815, 5, 0, 589816, 5, 0, 589817, 5, 0, 589818, 5, 0, 589819, 5, 0, 589820, 5, 0, 589821, 5, 0, 589822, 5, 0, 589823, 5, 0, 524288, 5, 0, 524289, 5, 0, 524290, 5, 0, 524291, 5, 0, 524292, 5, 0, 524293, 5, 0, 524294, 5, 0, 524295, 5, 0, 524296, 5, 0, 524297, 5, 0, 524298, 5, 0, 524299, 5, 0, 524300, 5, 0, 524301, 5, 0, 524302, 4, 0, 655348, 4, 0, 655349, 5, 0, 655350, 5, 0, 655351, 5, 0, 655352, 5, 0, 655353, 5, 0, 655354, 5, 0, 655355, 5, 0, 655356, 5, 0, 655357, 5, 0, 655358, 5, 0, 655359, 5, 0, 589824, 5, 0, 589825, 5, 0, 589826, 5, 0, 589827, 5, 0, 589828, 5, 0, 589829, 5, 0, 589830, 5, 0, 589831, 5, 0, 589832, 5, 0, 589833, 5, 0, 589834, 5, 0, 589835, 5, 0, 589836, 5, 0, 589837, 5, 0, 589838, 4, 0, 720884, 4, 0, 720885, 5, 0, 720886, 5, 0, 720887, 5, 0, 720888, 5, 0, 720889, 5, 0, 720890, 5, 0, 720891, 5, 0, 720892, 5, 0, 720893, 5, 0, 720894, 5, 0, 720895, 5, 0, 655360, 5, 0, 655361, 5, 0, 655362, 5, 0, 655363, 5, 0, 655364, 5, 0, 655365, 5, 0, 655366, 5, 0, 655367, 5, 0, 655368, 5, 0, 655369, 5, 0, 655370, 5, 0, 655371, 5, 0, 655372, 5, 0, 655373, 5, 0, 655374, 4, 0, 786420, 4, 0, 786421, 5, 0, 786422, 5, 0, 786423, 5, 0, 786424, 5, 0, 786425, 5, 0, 786426, 5, 0, 786427, 5, 0, 786428, 5, 0, 786429, 5, 0, 786430, 5, 0, 786431, 5, 0, 720896, 5, 0, 720897, 5, 0, 720898, 5, 0, 720899, 5, 0, 720900, 5, 0, 720901, 5, 0, 720902, 5, 0, 720903, 5, 0, 720904, 5, 0, 720905, 5, 0, 720906, 5, 0, 720907, 5, 0, 720908, 5, 0, 720909, 5, 0, 720910, 4, 0, 851956, 4, 0, 851957, 5, 0, 851958, 5, 0, 851959, 5, 0, 851960, 5, 0, 851961, 5, 0, 851962, 5, 0, 851963, 5, 0, 851964, 5, 0, 851965, 5, 0, 851966, 5, 0, 851967, 5, 0, 786432, 5, 0, 786433, 5, 0, 786434, 5, 0, 786435, 5, 0, 786436, 5, 0, 786437, 5, 0, 786438, 5, 0, 786439, 5, 0, 786440, 5, 0, 786441, 5, 0, 786442, 5, 0, 786443, 5, 0, 786444, 5, 0, 786445, 5, 0, 786446, 4, 0, 917492, 4, 0, 917493, 5, 0, 917494, 5, 0, 917495, 5, 0, 917496, 5, 0, 917497, 5, 0, 917498, 5, 0, 917499, 5, 0, 917500, 5, 0, 917501, 5, 0, 917502, 5, 0, 917503, 5, 0, 851968, 5, 0, 851969, 5, 0, 851970, 5, 0, 851971, 5, 0, 851972, 5, 0, 851973, 5, 0, 851974, 5, 0, 851975, 5, 0, 851976, 5, 0, 851977, 5, 0, 851978, 5, 0, 851979, 5, 0, 851980, 5, 0, 851981, 5, 0, 851982, 4, 0, 983028, 4, 0, 983029, 5, 0, 983030, 5, 0, 983031, 5, 0, 983032, 5, 0, 983033, 5, 0, 983034, 5, 0, 983035, 5, 0, 983036, 5, 0, 983037, 5, 0, 983038, 5, 0, 983039, 5, 0, 917504, 5, 0, 917505, 5, 0, 917506, 5, 0, 917507, 5, 0, 917508, 5, 0, 917509, 5, 0, 917510, 5, 0, 917511, 5, 0, 917512, 5, 0, 917513, 5, 0, 917514, 5, 0, 917515, 5, 0, 917516, 5, 0, 917517, 5, 0, 917518, 4, 0, 1048564, 4, 0, 1048565, 5, 0, 1048566, 5, 0, 1048567, 5, 0, 1048568, 5, 0, 1048569, 5, 0, 1048570, 5, 0, 1048571, 5, 0, 1048572, 5, 0, 1048573, 5, 0, 1048574, 5, 0, 1048575, 5, 0, 983040, 5, 0, 983041, 5, 0, 983042, 5, 0, 983043, 5, 0, 983044, 5, 0, 983045, 5, 0, 983046, 5, 0, 983047, 5, 0, 983048, 5, 0, 983049, 5, 0, 983050, 5, 0, 983051, 5, 0, 983052, 5, 0, 983053, 5, 0, 983054, 4, 0, 1114100, 4, 0, 1114101, 5, 0, 1114102, 5, 0, 1114103, 5, 0, 1114104, 5, 0, 1114105, 5, 0, 1114106, 5, 0, 1114107, 5, 0, 1114108, 5, 0, 1114109, 5, 0, 1114110, 5, 0, 1114111, 5, 0, 1048576, 5, 0, 1048577, 5, 0, 1048578, 5, 0, 1048579, 5, 0, 1048580, 5, 0, 1048581, 5, 0, 1048582, 5, 0, 1048583, 5, 0, 1048584, 5, 0, 1048585, 5, 0, 1048586, 5, 0, 1048587, 5, 0, 1048588, 5, 0, 1048589, 5, 0, 1048590, 4, 0, 1179636, 4, 0, 1179637, 5, 0, 1179638, 5, 0, 1179639, 5, 0, 1179640, 5, 0, 1179641, 5, 0, 1179642, 5, 0, 1179643, 5, 0, 1179644, 5, 0, 1179645, 5, 0, 1179646, 5, 0, 1179647, 5, 0, 1114112, 5, 0, 1114113, 5, 0, 1114114, 5, 0, 1114115, 5, 0, 1114116, 5, 0, 1114117, 5, 0, 1114118, 5, 0, 1114119, 5, 0, 1114120, 5, 0, 1114121, 5, 0, 1114122, 5, 0, 1114123, 5, 0, 1114124, 5, 0, 1114125, 5, 0, 1114126, 4, 0, 1245172, 536870913, 0, 1245173, 5, 0, 1245174, 5, 0, 1245175, 5, 0, 1245176, 5, 0, 1245177, 5, 0, 1245178, 5, 0, 1245179, 5, 0, 1245180, 5, 0, 1245181, 5, 0, 1245182, 5, 0, 1245183, 5, 0, 1179648, 5, 0, 1179649, 5, 0, 1179650, 5, 0, 1179651, 5, 0, 1179652, 5, 0, 1179653, 5, 0, 1179654, 5, 0, 1179655, 5, 0, 1179656, 5, 0, 1179657, 5, 0, 1179658, 5, 0, 1179659, 5, 0, 1179660, 5, 0, 1179661, 5, 0, 1179662, 1, 0, 1310708, 4, 0, 1310709, 5, 0, 1310710, 5, 0, 1310711, 5, 0, 1310712, 5, 0, 1310713, 5, 0, 1310714, 5, 0, 1310715, 5, 0, 1310716, 5, 0, 1310717, 5, 0, 1310718, 5, 0, 1310719, 5, 0, 1245184, 5, 0, 1245185, 5, 0, 1245186, 5, 0, 1245187, 5, 0, 1245188, 5, 0, 1245189, 5, 0, 1245190, 5, 0, 1245191, 5, 0, 1245192, 5, 0, 1245193, 5, 0, 1245194, 5, 0, 1245195, 5, 0, 1245196, 5, 0, 1245197, 5, 0, 1245198, 4, 0, 1376244, 4, 0, 1376245, 5, 0, 1376246, 5, 0, 1376247, 5, 0, 1376248, 5, 0, 1376249, 5, 0, 1376250, 5, 0, 1376251, 5, 0, 1376252, 5, 0, 1376253, 5, 0, 1376254, 5, 0, 1376255, 5, 0, 1310720, 5, 0, 1310721, 5, 0, 1310722, 5, 0, 1310723, 5, 0, 1310724, 5, 0, 1310725, 5, 0, 1310726, 5, 0, 1310727, 5, 0, 1310728, 5, 0, 1310729, 5, 0, 1310730, 5, 0, 1310731, 5, 0, 1310732, 5, 0, 1310733, 5, 0, 1310734, 4, 0, 1441780, 4, 0, 1441781, 5, 0, 1441782, 5, 0, 1441783, 5, 0, 1441784, 5, 0, 1441785, 5, 0, 1441786, 5, 0, 1441787, 5, 0, 1441788, 5, 0, 1441789, 5, 0, 1441790, 5, 0, 1441791, 5, 0, 1376256, 5, 0, 1376257, 5, 0, 1376258, 5, 0, 1376259, 5, 0, 1376260, 5, 0, 1376261, 5, 0, 1376262, 5, 0, 1376263, 5, 0, 1376264, 5, 0, 1376265, 5, 0, 1376266, 5, 0, 1376267, 5, 0, 1376268, 5, 0, 1376269, 5, 0, 1376270, 4, 0, 1507316, 4, 0, 1507317, 5, 0, 1507318, 5, 0, 1507319, 5, 0, 1507320, 5, 0, 1507321, 5, 0, 1507322, 5, 0, 1507323, 5, 0, 1507324, 5, 0, 1507325, 5, 0, 1507326, 5, 0, 1507327, 5, 0, 1441792, 5, 0, 1441793, 5, 0, 1441794, 5, 0, 1441795, 5, 0, 1441796, 5, 0, 1441797, 5, 0, 1441798, 5, 0, 1441799, 5, 0, 1441800, 5, 0, 1441801, 5, 0, 1441802, 5, 0, 1441803, 5, 0, 1441804, 5, 0, 1441805, 5, 0, 1441806, 4, 0, 1572852, 4, 0, 1572853, 5, 0, 1572854, 5, 0, 1572855, 5, 0, 1572856, 5, 0, 1572857, 5, 0, 1572858, 5, 0, 1572859, 5, 0, 1572860, 5, 0, 1572861, 5, 0, 1572862, 5, 0, 1572863, 5, 0, 1507328, 5, 0, 1507329, 5, 0, 1507330, 5, 0, 1507331, 5, 0, 1507332, 5, 0, 1507333, 5, 0, 1507334, 5, 0, 1507335, 5, 0, 1507336, 5, 0, 1507337, 5, 0, 1507338, 5, 0, 1507339, 5, 0, 1507340, 5, 0, 1507341, 5, 0, 1507342, 4, 0, 1638388, 4, 0, 1638389, 5, 0, 1638390, 5, 0, 1638391, 5, 0, 1638392, 5, 0, 1638393, 5, 0, 1638394, 5, 0, 1638395, 5, 0, 1638396, 5, 0, 1638397, 5, 0, 1638398, 5, 0, 1638399, 5, 0, 1572864, 5, 0, 1572865, 5, 0, 1572866, 5, 0, 1572867, 5, 0, 1572868, 5, 0, 1572869, 5, 0, 1572870, 5, 0, 1572871, 5, 0, 1572872, 5, 0, 1572873, 5, 0, 1572874, 5, 0, 1572875, 5, 0, 1572876, 5, 0, 1572877, 5, 0, 1572878, 4, 0, 1703924, 4, 0, 1703925, 5, 0, 1703926, 5, 0, 1703927, 5, 0, 1703928, 5, 0, 1703929, 5, 0, 1703930, 5, 0, 1703931, 5, 0, 1703932, 5, 0, 1703933, 5, 0, 1703934, 5, 0, 1703935, 5, 0, 1638400, 5, 0, 1638401, 5, 0, 1638402, 5, 0, 1638403, 5, 0, 1638404, 5, 0, 1638405, 5, 0, 1638406, 5, 0, 1638407, 5, 0, 1638408, 5, 0, 1638409, 5, 0, 1638410, 5, 0, 1638411, 5, 0, 1638412, 5, 0, 1638413, 5, 0, 1638414, 4, 0, 1769460, 4, 0, 1769461, 5, 0, 1769462, 5, 0, 1769463, 5, 0, 1769464, 5, 0, 1769465, 5, 0, 1769466, 5, 0, 1769467, 5, 0, 1769468, 5, 0, 1769469, 5, 0, 1769470, 5, 0, 1769471, 5, 0, 1703936, 5, 0, 1703937, 5, 0, 1703938, 5, 0, 1703939, 5, 0, 1703940, 5, 0, 1703941, 5, 0, 1703942, 5, 0, 1703943, 5, 0, 1703944, 5, 0, 1703945, 5, 0, 1703946, 5, 0, 1703947, 5, 0, 1703948, 5, 0, 1703949, 5, 0, 1703950, 4, 0, 1834996, 4, 0, 1834997, 5, 0, 1834998, 5, 0, 1834999, 5, 0, 1835000, 5, 0, 1835001, 5, 0, 1835002, 5, 0, 1835003, 5, 0, 1835004, 5, 0, 1835005, 5, 0, 1835006, 5, 0, 1835007, 5, 0, 1769472, 5, 0, 1769473, 5, 0, 1769474, 5, 0, 1769475, 5, 0, 1769476, 5, 0, 1769477, 5, 0, 1769478, 5, 0, 1769479, 5, 0, 1769480, 5, 0, 1769481, 5, 0, 1769482, 5, 0, 1769483, 5, 0, 1769484, 5, 0, 1769485, 5, 0, 1769486, 4, 0, 1900532, 536870913, 0, 1900533, 0, 0, 1900534, 0, 0, 1900535, 0, 0, 1900536, 0, 0, 1900537, 0, 0, 1900538, 0, 0, 1900539, 0, 0, 1900540, 0, 0, 1900541, 0, 0, 1900542, 0, 0, 1900543, 0, 0, 1835008, 0, 0, 1835009, 0, 0, 1835010, 0, 0, 1835011, 0, 0, 1835012, 0, 0, 1835013, 0, 0, 1835014, 0, 0, 1835015, 0, 0, 1835016, 0, 0, 1835017, 0, 0, 1835018, 0, 0, 1835019, 0, 0, 1835020, 0, 0, 1835021, 0, 0, 1835022, 1, 0 )
_sections_unfolded = [ "Collision" ]

[node name="One-WayPlatformGroup" type="Node2D" parent="tilemap" index="0"]

editor/display_folded = true

[node name="One-WayPlatform 2" parent="tilemap/One-WayPlatformGroup" index="0" instance=ExtResource( 2 )]

editor/display_folded = true
position = Vector2( 48, 592 )

[node name="KinematicBody2D" parent="tilemap/One-WayPlatformGroup/One-WayPlatform 2" index="0"]

collision/safe_margin = 0.08

[node name="Sprite" parent="tilemap/One-WayPlatformGroup/One-WayPlatform 2/KinematicBody2D" index="0"]

region_enabled = true
region_rect = Rect2( 0, 0, 800, 32 )

[node name="oneway" parent="tilemap/One-WayPlatformGroup/One-WayPlatform 2/KinematicBody2D" index="1"]

scale = Vector2( 25, 1 )
audio_bus_override = false
audio_bus_name = "Master"

[node name="HangableGroup" type="Node2D" parent="tilemap" index="1"]

editor/display_folded = true

[node name="HangBlock" parent="tilemap/HangableGroup" index="0" instance=ExtResource( 3 )]

position = Vector2( -336, 624 )
collision/safe_margin = 0.08

[node name="HangBlock1" parent="tilemap/HangableGroup" index="1" instance=ExtResource( 3 )]

position = Vector2( -304, 624 )
collision/safe_margin = 0.08

[node name="HangBlock2" parent="tilemap/HangableGroup" index="2" instance=ExtResource( 3 )]

position = Vector2( -272, 624 )
collision/safe_margin = 0.08

[node name="HangBlock3" parent="tilemap/HangableGroup" index="3" instance=ExtResource( 3 )]

position = Vector2( -240, 624 )
collision/safe_margin = 0.08

[node name="HangBlock4" parent="tilemap/HangableGroup" index="4" instance=ExtResource( 3 )]

position = Vector2( -208, 624 )
collision/safe_margin = 0.08

[node name="HangBlock5" parent="tilemap/HangableGroup" index="5" instance=ExtResource( 3 )]

position = Vector2( -176, 624 )
collision/safe_margin = 0.08

[node name="HangBlock6" parent="tilemap/HangableGroup" index="6" instance=ExtResource( 3 )]

position = Vector2( -144, 624 )
collision/safe_margin = 0.08

[node name="HangBlock7" parent="tilemap/HangableGroup" index="7" instance=ExtResource( 3 )]

position = Vector2( -112, 624 )
collision/safe_margin = 0.08

[node name="HangBlock8" parent="tilemap/HangableGroup" index="8" instance=ExtResource( 3 )]

position = Vector2( -80, 624 )
collision/safe_margin = 0.08

[node name="HangBlock9" parent="tilemap/HangableGroup" index="9" instance=ExtResource( 3 )]

position = Vector2( -48, 624 )
collision/safe_margin = 0.08

[node name="HangBlock10" parent="tilemap/HangableGroup" index="10" instance=ExtResource( 3 )]

position = Vector2( -16, 624 )
collision/safe_margin = 0.08

[node name="HangBlock11" parent="tilemap/HangableGroup" index="11" instance=ExtResource( 3 )]

position = Vector2( 16, 624 )
collision/safe_margin = 0.08

[node name="HangBlock12" parent="tilemap/HangableGroup" index="12" instance=ExtResource( 3 )]

position = Vector2( 48, 624 )
collision/safe_margin = 0.08

[node name="HangBlock13" parent="tilemap/HangableGroup" index="13" instance=ExtResource( 3 )]

position = Vector2( 80, 624 )
collision/safe_margin = 0.08

[node name="HangBlock14" parent="tilemap/HangableGroup" index="14" instance=ExtResource( 3 )]

position = Vector2( 112, 624 )
collision/safe_margin = 0.08

[node name="HangBlock15" parent="tilemap/HangableGroup" index="15" instance=ExtResource( 3 )]

position = Vector2( 144, 624 )
collision/safe_margin = 0.08

[node name="HangBlock16" parent="tilemap/HangableGroup" index="16" instance=ExtResource( 3 )]

position = Vector2( 176, 624 )
collision/safe_margin = 0.08

[node name="HangBlock17" parent="tilemap/HangableGroup" index="17" instance=ExtResource( 3 )]

position = Vector2( 208, 624 )
collision/safe_margin = 0.08

[node name="HangBlock18" parent="tilemap/HangableGroup" index="18" instance=ExtResource( 3 )]

position = Vector2( 240, 624 )
collision/safe_margin = 0.08

[node name="HangBlock19" parent="tilemap/HangableGroup" index="19" instance=ExtResource( 3 )]

position = Vector2( 272, 624 )
collision/safe_margin = 0.08

[node name="HangBlock20" parent="tilemap/HangableGroup" index="20" instance=ExtResource( 3 )]

position = Vector2( 304, 624 )
collision/safe_margin = 0.08

[node name="HangBlock21" parent="tilemap/HangableGroup" index="21" instance=ExtResource( 3 )]

position = Vector2( 336, 624 )
collision/safe_margin = 0.08

[node name="HangBlock22" parent="tilemap/HangableGroup" index="22" instance=ExtResource( 3 )]

position = Vector2( 368, 624 )
collision/safe_margin = 0.08

[node name="HangBlock23" parent="tilemap/HangableGroup" index="23" instance=ExtResource( 3 )]

position = Vector2( 400, 624 )
collision/safe_margin = 0.08

[node name="HangBlock24" parent="tilemap/HangableGroup" index="24" instance=ExtResource( 3 )]

position = Vector2( 432, 624 )
collision/safe_margin = 0.08

[node name="AccessGroup" type="Node2D" parent="tilemap" index="2"]

editor/display_folded = true

[node name="One-WayPlatform 2" parent="tilemap/AccessGroup" index="0" instance=ExtResource( 2 )]

editor/display_folded = true
position = Vector2( -304, 272 )

[node name="KinematicBody2D" parent="tilemap/AccessGroup/One-WayPlatform 2" index="0"]

collision/safe_margin = 0.08

[node name="Sprite" parent="tilemap/AccessGroup/One-WayPlatform 2/KinematicBody2D" index="0"]

region_enabled = true
region_rect = Rect2( 0, 0, 96, 32 )

[node name="oneway" parent="tilemap/AccessGroup/One-WayPlatform 2/KinematicBody2D" index="1"]

scale = Vector2( 3, 1 )
audio_bus_override = false
audio_bus_name = "Master"

[node name="HangBlock" parent="tilemap/AccessGroup" index="1" instance=ExtResource( 3 )]

position = Vector2( -336, 304 )
collision/safe_margin = 0.08

[node name="HangBlock1" parent="tilemap/AccessGroup" index="2" instance=ExtResource( 3 )]

position = Vector2( -304, 304 )
collision/safe_margin = 0.08

[node name="HangBlock2" parent="tilemap/AccessGroup" index="3" instance=ExtResource( 3 )]

editor/display_folded = true
position = Vector2( -272, 304 )
collision/safe_margin = 0.08

[node name="Sprite" parent="tilemap/AccessGroup/HangBlock2" index="0"]

texture = ExtResource( 4 )
flip_h = true

[node name="hangable" parent="tilemap/AccessGroup/HangBlock2" index="1"]

audio_bus_override = false
audio_bus_name = "Master"

[node name="SpikeGroup" type="Node2D" parent="tilemap" index="3"]

editor/display_folded = true

[node name="SpikeTile" parent="tilemap/SpikeGroup" index="0" instance=ExtResource( 5 )]

position = Vector2( 48, 880 )

[node name="Sprite" parent="tilemap/SpikeGroup/SpikeTile" index="0"]

region_enabled = true
region_rect = Rect2( 0, 0, 800, 32 )

[node name="damagable" parent="tilemap/SpikeGroup/SpikeTile" index="1"]

scale = Vector2( 25, 1 )
audio_bus_override = false
audio_bus_name = "Master"

[node name="GateGroup" type="Node2D" parent="tilemap" index="4"]

[node name="BossGroup" type="Node2D" parent="tilemap" index="5"]

editor/display_folded = true

[node name="GiantEyeball" parent="tilemap/BossGroup" index="0" instance=ExtResource( 6 )]

position = Vector2( 48, 32 )

[node name="SensorGroup" type="Node2D" parent="tilemap" index="6"]

[node name="sensor" type="Area2D" parent="tilemap/SensorGroup" index="0"]

position = Vector2( 0, 560 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="tilemap/SensorGroup/sensor" index="0"]

position = Vector2( 49.3303, 3 )
scale = Vector2( 0.92502, 1 )
shape = SubResource( 1 )

[node name="TeleportGroup" type="Node2D" parent="tilemap" index="7"]

[node name="Teleport" parent="tilemap/TeleportGroup" index="0" instance=ExtResource( 8 )]

editor/display_folded = true
position = Vector2( 48, -336 )
is_horizontal = false
target_level = "res://levels/holyruins/0-15.tscn"
teleport_to = Vector2( 336, 448 )

[node name="teleport" parent="tilemap/TeleportGroup/Teleport" index="0"]

scale = Vector2( 3, 1 )

[node name="Teleport1" parent="tilemap/TeleportGroup" index="1" instance=ExtResource( 8 )]

editor/display_folded = true
position = Vector2( -400, 176 )
target_level = "res://levels/holyruins/1-5.tscn"
teleport_to = Vector2( 908, 432 )

[node name="teleport" parent="tilemap/TeleportGroup/Teleport1" index="0"]

scale = Vector2( 1, 5 )

[node name="boundaries" type="Node2D" parent="tilemap" index="8"]

[node name="NW" type="Position2D" parent="tilemap/boundaries" index="0"]

position = Vector2( -400, -336 )

[node name="SE" type="Position2D" parent="tilemap/boundaries" index="1"]

position = Vector2( 496, 944 )


[editable path="tilemap/One-WayPlatformGroup/One-WayPlatform 2"]
[editable path="tilemap/AccessGroup/One-WayPlatform 2"]
[editable path="tilemap/AccessGroup/HangBlock2"]
[editable path="tilemap/SpikeGroup/SpikeTile"]
[editable path="tilemap/TeleportGroup/Teleport"]
[editable path="tilemap/TeleportGroup/Teleport1"]
